--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: My Site
-remote_theme: pages-themes/cayman@v0.2.0
+theme: jekyll-theme-minimal
 
 title: [Site]
 description: [Визитная карточка]
