Change theme to remote _config.yml
Change description field as well

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: My Site
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
 
 title: [Site]
-description: [Визитная карточка]
+description: [Тестовый сайт]
